--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - ./prometheus:/etc/prometheus
       - prom_data:/prometheus
     extra_hosts:
-      - "host.docker.internal:172.17.0.1"
+      - "host.docker.internal"
   grafana:
     image: grafana/grafana
     container_name: grafana
