--- a/compose files/mongo/docker-compose.yml
+++ b/compose files/mongo/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 
 services:
   mongo:
@@ -7,6 +7,10 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: tie
       MONGO_INITDB_ROOT_PASSWORD: sec1.01
+    ports:
+      - 27017:27017
+    volumes:
+      - mongodata:/data/db
 
   mongo-express:
     image: mongo-express
@@ -14,6 +18,10 @@ services:
     ports:
       - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: root
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: pass
       ME_CONFIG_MONGODB_URL: mongodb://tie:sec1.01@mongo:27017/
+
+volumes:
+  mongodata:
+    driver: local
