--- a/compose files/postgres/docker-compose.yml
+++ b/compose files/postgres/docker-compose.yml
@@ -1,17 +1,30 @@
 version: '3.8'
+
+volumes:
+  postgres-data:
+
+
 services:
   db:
-    container_name: pg_container
-    image: postgres
-    restart: always
-    environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: root
-      POSTGRES_DB: test_db
+    image: postgres:latest
+    restart: unless-stopped
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-    volumes:
-      - $HOME/Desktop/PostgreSql-Snippets/infile:/infile
-      - pg_data:/var/lib/postgresql/data/
-volumes:
-  pg_data:
+    environment:
+      POSTGRES_PASSWORD: sec1.01
+      POSTGRES_USER: tie
+      POSTGRES_DB: postgres
+
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: unless-stopped
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: zli@example.com
+      PGADMIN_DEFAULT_PASSWORD: zli*123
+
+
+
