--- a/Lehrverwaltung/server/src/main/resources/application.yml
+++ b/Lehrverwaltung/server/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/lehrverwaltung
+    url: jdbc:mariadb://chucknorris.tie.local:3306/lehrverwaltung
     username: root
     password:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
 server:
   servlet:
     session:
@@ -24,6 +24,6 @@ docker-java:
   image:
     name: ghcr.io/graalvm/graalvm-ce:latest
   host:
-    url: tcp://localhost:2375
+    url: tcp://chucknorris.tie.local:2375
   container:
     name: bladerunner
