--- a/compose files/maria/docker-compose.yml
+++ b/compose files/maria/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     image: mariadb
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: sec1.01
       MYSQL_USER:  tie
       MYSQL_PASSWORD: sec1.01
     expose:
