added nginx exporter

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,5 +22,12 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
+  node:
+    image: quay.io/prometheus/node-exporter
+    container_name: node-exporter
+    ports:
+      - 9100:9100
+    volumes:
+      - "/:/rootfs"
 volumes:
   prom_data:
