--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -33,25 +33,14 @@ scrape_configs:
     static_configs:
       - targets: [ 'host.docker.internal:9104' ]
 
-  - job_name: design-patterns
-    metrics_path: /metrics
+  - job_name: nginx-exporter
     static_configs:
-      - targets: [ 'host.docker.internal:2700' ]
-
-  - job_name: jsf-frontend
-    metrics_path: /metrics
-    static_configs:
-      - targets: [ 'host.docker.internal:2600' ]
+      - targets: [ 'host.docker.internal:9113' ]
 
   - job_name: jsf-backend
     metrics_path: /actuator/prometheus
     static_configs:
       - targets: [ 'host.docker.internal:2500' ]
-
-  - job_name: lz-frontend
-    metrics_path: /metrics
-    static_configs:
-      - targets: [ 'host.docker.internal:8000' ]
 
   - job_name: lz-config-server
     metrics_path: /actuator/prometheus
