--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -31,9 +31,9 @@ scrape_configs:
 
   - job_name: mariadb_exporter
     static_configs:
-      - targets: [ 'host.docker.internal:9104' ]
+      - targets: [ 'http://chucknorris.tie.local:9104' ]
 
-  - job_name: nginx-exporter
+  - job_name: design-patterns
     static_configs:
       - targets: [ 'host.docker.internal:9113' ]
 
