--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -31,7 +31,7 @@ scrape_configs:
 
   - job_name: mariadb_exporter
     static_configs:
-      - targets: [ 'http://chucknorris.tie.local:9104' ]
+      - targets: [ 'chucknorris.tie.local:9104' ]
 
   - job_name: design-patterns
     static_configs:
