--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,16 +22,20 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
-  node_exporter:
-    image: quay.io/prometheus/node-exporter
+  node-exporter:
+    image: prom/node-exporter:latest
     container_name: node-exporter
-    ports:
-      - "9100:9100"
-    command:
-      - '--path.rootfs=/host'
-    pid: host
     restart: unless-stopped
     volumes:
-      - "/:host:ro,rslave"
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.rootfs=/rootfs'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+    expose:
+      - 9100
 volumes:
   prom_data:
