--- a/nginx-exporter/docker-compose.yml
+++ b/nginx-exporter/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.9"
 services:
   nginx-exporter:
     image: "nginx/nginx-prometheus-exporter:latest"
-    command: ["-nginx.scrape-uri=http://chucknorris.tie.local:2600/metrics/jsf", "-nginx.scrape-uri=http://chucknorris.tie.local:2700/metrics/design-patterns", "-nginx.scrape-uri=http://chucknorris.tie.local:8000/metrics/lzk"]
+    command: ["-nginx.scrape-uri=http://chucknorris.tie.local:2600/metrics/jsf",
+              "-nginx.scrape-uri=http://chucknorris.tie.local:2700/metrics/design-patterns",
+              "-nginx.scrape-uri=http://chucknorris.tie.local:8000/metrics/lzk"]
     ports:
       - "9113:9113"
