--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -25,9 +25,20 @@ scrape_configs:
     static_configs:
       - targets: [ 'host.docker.internal:9216' ]
 
-  - job_name: node_exporter
+  - job_name: jsf-frontend
+    metrics_path: /metrics/jsf
     static_configs:
-      - targets: [ 'host.docker.internal:9100' ]
+      - targets: [ 'host.docker.internal:2600' ]
+
+  - job_name: lz-frontend
+    metrics_path: /metrics/lzk
+    static_configs:
+      - targets: [ 'host.docker.internal:8000' ]
+
+  - job_name: design-patterns
+    metrics_path: /metrics/design-patterns
+    static_configs:
+      - targets: [ 'host.docker.internal:2700' ]
 
   - job_name: postgres_exporter
     static_configs:
@@ -80,4 +91,3 @@ scrape_configs:
     metrics_path: /actuator/prometheus
     static_configs:
       - targets: [ 'host.docker.internal:8072' ]
-
