--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -40,6 +40,10 @@ scrape_configs:
     static_configs:
       - targets: [ 'host.docker.internal:2700' ]
 
+  - job_name: nginx-exporter
+    static_configs:
+      - targets: [ 'host.docker.internal:9113' ]
+
   - job_name: postgres_exporter
     static_configs:
       - targets: [ 'host.docker.internal:9187' ]
