--- a/compose files/mongo/docker-compose.yml
+++ b/compose files/mongo/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     ports:
       - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
-      ME_CONFIG_MONGODB_ADMINPASSWORD: pass
+      ME_CONFIG_MONGODB_ADMINUSERNAME: tie
+      ME_CONFIG_MONGODB_ADMINPASSWORD: sec1.01
       ME_CONFIG_MONGODB_URL: mongodb://tie:sec1.01@mongo:27017/
 
 volumes:
