--- a/compose files/postgres/docker-compose.yml
+++ b/compose files/postgres/docker-compose.yml
@@ -23,5 +23,5 @@ services:
     ports:
       - "5050:80"
     environment:
-      PGADMIN_DEFAULT_EMAIL: zli@example.com
-      PGADMIN_DEFAULT_PASSWORD: zli*123
+      PGADMIN_DEFAULT_EMAIL: admin@tie.ch
+      PGADMIN_DEFAULT_PASSWORD: sec1.01
