--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -40,9 +40,17 @@ scrape_configs:
     static_configs:
       - targets: [ 'host.docker.internal:2700' ]
 
-  - job_name: nginx-exporter
+  - job_name: nginx-exporter-jsf
     static_configs:
       - targets: [ 'host.docker.internal:9113' ]
+
+  - job_name: nginx-exporter-design-patterns
+    static_configs:
+      - targets: [ 'host.docker.internal:9114' ]
+
+  - job_name: nginx-exporter-lzk
+    static_configs:
+      - targets: [ 'host.docker.internal:9115' ]
 
   - job_name: postgres_exporter
     static_configs:
