--- a/nginx-exporter/docker-compose.yml
+++ b/nginx-exporter/docker-compose.yml
@@ -2,15 +2,19 @@ version: "3.9"
 services:
   nginx-exporter-lzk:
     image: "nginx/nginx-prometheus-exporter:latest"
-    command: "-nginx.scrape-uri=http://chucknorris.tie.local:8000/metrics/lzk"
+    command: ["-nginx.scrape-uri=http://chucknorris.tie.local:8000/metrics/lzk",
+              "-nginx.scrape-uri=http://chucknorris.tie.local:2600/metrics/jsf",
+              "-nginx.scrape-uri=http://chucknorris.tie.local:2700/metrics/design-patterns"]
     ports:
       - "9113:9113"
 
   nginx-exporter-jsf:
     image: "nginx/nginx-prometheus-exporter:latest"
-    command: "-nginx.scrape-uri=http://chucknorris.tie.local:2600/metrics/jsf"
+    command:
+           ["-nginx.scrape-uri=http://chucknorris.tie.local:2600/metrics/jsf", "-nginx.ssl-verify=false", "-web.listen-address:9114"]
     ports:
       - "9114:9114"
+
   nginx-exporter-dp:
     image: "nginx/nginx-prometheus-exporter:latest"
     command: "-nginx.scrape-uri=http://chucknorris.tie.local:2700/metrics/design-patterns"
